<resources>
    <string name="app_name">CloudRun</string>

    <!-- Permissions -->
    <string name="permission_title">Insufficient permissions</string>
    <string name="permission_location">Please allow the app to access precise location.</string>
    <string name="permission_storage">Please allow the app to write to external storage.</string>

    <!-- Location settings -->
    <string name="location_required_title">Location service required</string>
    <string name="location_required_message">Please turn the location service on.</string>

    <!-- Default values -->
    <string name="default_stopwatch">00:00:00</string>
    <string name="default_distance">0.00</string>
    <string name="default_speed">0.0</string>
    <string name="default_pace">00:00</string>
    <string name="not_available">-</string>

    <!-- Units -->
    <string name="unit_distance">km</string>
    <string name="unit_speed">km/h</string>
    <string name="unit_pace">min/km</string>
    <string name="unit_speed_avg">km/h (avg)</string>
    <string name="unit_pace_avg">min/km (avg)</string>
    <string name="unit_hour">h</string>
    <string name="unit_minute">min</string>
    <string name="unit_second">s</string>

    <!-- Actions -->
    <string name="action_download">Download</string>
    <string name="action_upload">Upload</string>
    <string name="action_delete">Delete</string>
    <string name="action_connect">Connect</string>
    <string name="action_select_all">Select all</string>
    <string name="action_gps">Show or hide GPS accuracy</string>
    <string name="action_map">Open map</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_edit">Edit</string>
    <string name="action_routes">Activate routes</string>
    <string name="action_start">Start</string>
    <string name="action_resume">Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desc_navigation_drawer_logo">Logo</string>

    <!-- Monitor -->
    <string name="monitor_session_locked">Session locked</string>
    <string name="desc_action_start">Start / resume session</string>
    <string name="desc_action_stop">Stop session</string>
    <string name="desc_action_pause">Pause session</string>
    <string name="desc_action_lock">Unlock screen</string>

    <!-- History -->
    <string name="history_title">History</string>
    <string name="history_no_session">No sessions available</string>
    <string name="history_upload_success_snackbar">Sessions uploaded</string>
    <string name="history_delete_snackbar">Sessions deleted</string>
    <string name="history_list_distance">Distance:</string>
    <string name="history_list_duration">Duration:</string>
    <string name="history_list_speed">Speed:</string>
    <string name="history_list_pace">Pace:</string>

    <!-- Session -->
    <string name="session_upload_success_snackbar">Session uploaded</string>
    <string name="session_label_duration">duration</string>
    <string name="session_label_distance">distance (km)</string>
    <string name="session_label_speed">speed (km/h)</string>
    <string name="session_label_pace">pace (min/km)</string>
    <string name="session_no_data_available">No data available</string>
    <string name="session_delete_snackbar">Session deleted</string>
    <string name="session_download_success_snackbar">Sessions downloaded</string>
    <string name="session_download_no_file_snackbar">No sessions to be downloaded</string>

    <!-- General Cloud Operations -->
    <string name="upload_writing_failure_title">File creation failed</string>
    <string name="upload_failure_title">Upload failed</string>
    <string name="download_failure_title">Download failed</string>
    <string name="download_reading_failure_title">File parsing failed</string>
    <string name="download_insert_failure_title">Insertion into database failed</string>

    <!-- Add Session -->
    <string name="add_session_title">Add session</string>
    <string name="add_session_date">Date</string>
    <string name="add_session_time">Time</string>
    <string name="add_session_duration">Duration</string>
    <string name="add_session_distance">Distance</string>
    <string name="add_session_desc_icon">Icon</string>

    <!-- Duration dialog -->
    <string name="duration_title">Duration</string>

    <!-- Distance dialog -->
    <string name="distance_title">Distance</string>
    <string name="distance_separator">,</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="distance_cnt_summary">&#160;measurements</string>
    <string name="distance_to_marker_summary">&#160;meters</string>

    <!-- About -->
    <string name="about_title">About CloudRun</string>
    <string name="about_github">https://github.com/Alkisum/CloudRun/</string>

    <!-- Route List -->
    <string name="routes_title">Routes</string>
    <string name="routes_add_dialog">Add route</string>
    <string name="routes_delete_snackbar">Routes deleted</string>
    <string name="routes_no_route">No routes available</string>
    <string name="routes_download_success_snackbar">Routes downloaded</string>
    <string name="routes_download_no_file_snackbar">No routes to be downloaded</string>
    <string name="routes_upload_success_snackbar">Routes uploaded</string>

    <!-- Route -->
    <string name="route_delete_snackbar">Route deleted</string>
    <string name="route_edit_dialog">Edit route</string>
    <string name="route_hint_name">Name</string>
    <string name="route_upload_success_snackbar">Route uploaded</string>

    <!-- Marker -->
    <string name="marker_add_dialog">Add marker</string>
    <string name="marker_edit_dialog">Edit marker</string>
    <string name="marker_hint_label">Label</string>
    <string name="marker_delete_snackbar">Markers deleted</string>

</resources>
