<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_cloud_download_white_24dp"
        android:title="@string/action_download"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_cloud_upload_white_24dp"
        android:title="@string/action_upload"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="never"/>
</menu>