<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_gps_not_fixed_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_gps"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_near_me_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_map"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_routes"
        android:icon="@drawable/ic_timeline_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_routes"
        app:showAsAction="never"/>
</menu>
