<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="horizontal">

    <NumberPicker
        android:id="@+id/duration_nb_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/unit_hour"/>

    <NumberPicker
        android:id="@+id/duration_nb_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/unit_minute"/>

    <NumberPicker
        android:id="@+id/duration_nb_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/unit_second"/>

</LinearLayout>