<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/history_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

    <TextView
        android:id="@+id/history_list_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_list_date_time"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/history_list_distance_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/history_list_distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/history_list_distance"/>

                <TextView
                    android:id="@+id/history_list_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/history_list_distance_label"
                    android:gravity="end"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/history_list_distance_layout">

                <TextView
                    android:id="@+id/history_list_duration_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/history_list_duration"/>

                <TextView
                    android:id="@+id/history_list_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/history_list_duration_label"
                    android:gravity="end"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/history_list_speed_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/history_list_speed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/history_list_speed"/>

                <TextView
                    android:id="@+id/history_list_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/history_list_speed_label"
                    android:gravity="end"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/history_list_speed_layout">

                <TextView
                    android:id="@+id/history_list_pace_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/history_list_pace"/>

                <TextView
                    android:id="@+id/history_list_pace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/history_list_pace_label"
                    android:gravity="end"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>