<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/session_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgOut"
    tools:context=".history.SessionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/session_toolbar"
        style="@style/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/session_toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/session_layout_txt_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@color/bgTile"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/session_txt_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/session_txt_duration"
                    android:gravity="center_horizontal"
                    android:text="@string/session_label_duration"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@color/bgTile"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/session_txt_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/session_txt_distance"
                    android:gravity="center_horizontal"
                    android:text="@string/session_label_distance"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/session_layout_txt_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/session_layout_txt_top"
            android:layout_marginBottom="4dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/bgTile"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/session_txt_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/session_txt_speed"
                    android:gravity="center_horizontal"
                    android:text="@string/session_label_speed"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/bgTile"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/session_txt_pace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/session_txt_pace"
                    android:gravity="center_horizontal"
                    android:text="@string/session_label_pace"/>

            </RelativeLayout>

        </LinearLayout>

        <org.osmdroid.views.MapView
            android:id="@+id/session_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/session_layout_txt_bottom"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/session_txt_no_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/session_layout_txt_bottom"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/session_no_data_available"
            android:textStyle="italic"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>