<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/monitor_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".monitor.MonitorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/monitor_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/primary">

            <TextView
                android:id="@+id/monitor_txt_gps_accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/monitor_toolbar"
            android:background="#212121"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/tile">

                <TextView
                    android:id="@+id/monitor_txt_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/default_stopwatch"
                    android:textSize="80sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false">

                <RelativeLayout
                    android:id="@+id/monitor_layout_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tile"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/monitor_txt_left_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="60sp"/>

                    <TextView
                        android:id="@+id/monitor_txt_left_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/monitor_txt_left_value"
                        android:layout_centerHorizontal="true"
                        android:textSize="30sp"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/monitor_layout_right_top"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/tile"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/monitor_txt_right_top_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:textSize="30sp"/>

                        <TextView
                            android:id="@+id/monitor_txt_right_top_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/monitor_txt_right_top_value"
                            android:layout_centerHorizontal="true"
                            android:textSize="15sp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/monitor_layout_right_bottom"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/tile"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/monitor_txt_right_bottom_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:textSize="30sp"/>

                        <TextView
                            android:id="@+id/monitor_txt_right_bottom_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/monitor_txt_right_bottom_value"
                            android:layout_centerHorizontal="true"
                            android:textSize="15sp"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false">

                <!--<RelativeLayout
                    android:id="@+id/monitor_layout_gps_accuracy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/desc_gps_accuracy"
                        android:src="@drawable/ic_gps_not_fixed_grey_130dp"/>

                    <TextView
                        android:id="@+id/monitor_txt_gps_accuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/gpsAccuracy"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                </RelativeLayout>-->

                <RelativeLayout
                    android:id="@+id/monitor_layout_start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/monitor_button_start"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/action_button"
                        android:contentDescription="@string/desc_action_start"
                        android:src="@drawable/ic_play_arrow_white_48dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/monitor_layout_pause"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/monitor_button_pause"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/action_button"
                        android:contentDescription="@string/desc_action_pause"
                        android:src="@drawable/ic_pause_white_48dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/monitor_layout_stop"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/monitor_button_stop"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/action_button"
                        android:contentDescription="@string/desc_action_stop"
                        android:src="@drawable/ic_stop_white_48dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/monitor_layout_lock"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/monitor_button_lock"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/action_button"
                        android:contentDescription="@string/desc_action_lock"
                        android:src="@drawable/ic_lock_outline_white_48dp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/monitor_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_monitor"/>

</android.support.v4.widget.DrawerLayout>
